refactor: regenerate proxy mock classes and update metaminer logic